--- a/build.gradle
+++ b/build.gradle
@@ -33,11 +33,15 @@ dependencies {
     implementation "io.ktor:ktor-server-netty:$ktor_version"
     implementation "ch.qos.logback:logback-classic:$logback_version"
     implementation "io.ktor:ktor-server-core:$ktor_version"
-    implementation "io.ktor:ktor-server-host-common:$ktor_version"
     implementation "io.ktor:ktor-locations:$ktor_version"
     implementation "io.ktor:ktor-server-sessions:$ktor_version"
     implementation "io.ktor:ktor-auth:$ktor_version"
     implementation "io.ktor:ktor-auth-jwt:$ktor_version"
     implementation "io.ktor:ktor-gson:$ktor_version"
+    implementation"org.jetbrains.exposed:exposed-core:$exposed_version"
+    implementation"org.jetbrains.exposed:exposed-dao:$exposed_version"
+    implementation"org.jetbrains.exposed:exposed-jdbc:$exposed_version"
+    implementation"org.postgresql:postgresql:$postgres_version"
+    implementation"com.zaxxer:HikariCP:$hikaricp_version"
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
 }
