--- a/AppUah/pom.xml
+++ b/AppUah/pom.xml
@@ -58,6 +58,11 @@
             <version>${ktor_version}</version>
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+        <dependency>
             <groupId>io.ktor</groupId>
             <artifactId>ktor-locations</artifactId>
             <version>${ktor_version}</version>
